# job-board

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .test.env  CLAUDE.md  README.md  alembic.ini  deploy.sh  package-lock.json  package.json  pyproject.toml  vitest.config.js
.github/workflows/: cd.yaml  cd.yml  ci.yaml  claude-review.yml  claude.yml  coverage.yaml  deploy.yml  tests.yaml
infra/: README.md  encrypt_secrets.sh  hosts.yml  playbook.yml  vault.yml
infra/templates/: env.j2  jobboard-scheduler.service.j2  jobboard.service.j2  nginx.conf.j2
job_board/: api.py  base.py  cli.py  config.py  connection.py  init_db.py  logger.py  models.py  query.py  scheduled_jobs.py  scheduler.py  schedules.py  utils.py  views.py
job_board/migrations/: env.py
job_board/migrations/versions/: 085d4683e519_add_locations_field_and_valid_location_.py  af920161464c_add_company_name_column_to_job_table.py
job_board/notifier/: mail.py
job_board/portals/: __init__.py  base.py  himalayas.py  models.py  parser.py  python_dot_org.py  remotive.py  wellfound.py  weworkremotely.py  work_at_a_startup.py
job_board/static/css/: input.css  output.css  styles.css
job_board/static/js/: main.js  main.mjs
job_board/templates/: early_access.html  layout.html  mail.html  wellfound-request-params.json  work-at-a-startup-request-params.json
job_board/templates/jobs/: index.html
job_notifier/: __main__.py  base.py  cli.py  config.py  conftest.py  connection.py  logger.py  main.py  models.py  test_base.py  test_models.py  utils.py
job_notifier/notifier/: __init__.py  mail.py
job_notifier/portals/: base.py  remotive.py  test_weworkremotely.py  weworkremotely.py
migrations/: env.py
scripts/: build-tailwind.sh  encrypt_secrets.sh  generate-test-module.js  generate-test-module.sh
tests/: conftest.py  test_base.py  test_cli.py  test_models.py  test_parser.py  test_query.py  test_scheduled_jobs.py  test_scheduler.py  test_schedules.py  test_utils.py  test_views.py
tests/js/: main.test.js  setup.js
tests/notifier/: test_mail.py
tests/portals/: test_base.py  test_himalayas.py  test_parser.py  test_python_dot_org.py  test_python_org.py  test_remotive.py  test_wellfound.py  test_weworkremotely.py  test_work_at_a_startup.py
tests/portals/responses/: himalayas-page-1.json  himalayas-page-2.json  python_dot_org.rss  python_jobs_sample.html  wellfound-page-1.html  wellfound-page-1.json  wellfound-page-2.json  weworkremotely.html  work-at-a-startup.json
tests/responses/: himalayas-page-1.json  himalayas-page-2.json  openai.json  python_sample_job.html  wellfound-detail-page.html  wellfound-page-2.html  weworkremotely.html  work-at-a-startup-algolia.json  work-at-a-startup.json
