[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-board"
version = "0.0.1"
requires_python = ">=3.13"
authors = [
    {"name" = "someone", "email" = "someone@example.com"}
]
description = "Job Notifier"
dependencies = [
    "httpx[http2]",
    "lxml",
    "markdown",
    "google-api-python-client",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "schedule",
    "click",
    "humanize",
    "pydantic",
    "cssselect",
    "Jinja2",
    "tenacity",
    "Flask",
    "pycountry",
    "babel",
]
[project.optional-dependencies]
dev = [
    "pre-commit",
    "ipython",
    "pytest",
    "respx",
    "coverage",
    "freezegun",
    "pytest-randomly",
]

[project.scripts]
job-board = "job_board.cli:main"

[tool.coverage.paths]
source = [
    "job_board/",
]

[tool.coverage.run]
branch = true
command_line = "-m pytest"

[tool.coverage.report]
fail_under = 98
show_missing = true
skip_covered = true
precision = 2

[tool.ruff]
line-length=88

[tool.ruff.lint]
extend-select = ["E501"]
